--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <div class="d-flex fsd-atia-main-img">
                 <img class="" src="assets/images/AtiaFerdousee.jpg" alt="" />
               </div>
-              <div class="media-body px-5 ml-5">
+              <div class="media-body px-lg-5 ml-lg-5">
                 <div class="personal_text section-one-text-con">
                   <h1 class="mb-3 pb-3">Atia Ferdousee</h1>
                   <h4 class="mb-5 mt-4">
@@ -296,9 +296,9 @@
     <footer class="footer_area bg-dark">
       <div class="container">
         <div class="row footer_inner">
-          <div class="col-lg-12 text-center">
+          <div class="col-lg-12 text-center bg-dark">
             <aside class="f_widget ab_widget">
-              <p class="my-4 p-4 mx-auto text-white">
+              <p class="my-0 p-4 mx-auto text-white">
                 Copyright &copy;
                 <script>
                   document.write(new Date().getFullYear());
