--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             >
               <ul class="nav navbar-nav menu_nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" target="_blank" href="./assets/docs/AtiaFerdouseeCV.pdf">Curriculum Vitae</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about-us.html">About</a>
+                  <a class="nav-link" href="#Research">Research</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="services.html">Services</a>
+                  <a class="nav-link" href="#Teaching">Teaching</a>
                 </li>
-                <li class="nav-item submenu dropdown">
+                <!-- <li class="nav-item submenu dropdown">
                   <a
                     href="#"
                     class="nav-link dropdown-toggle"
@@ -91,8 +91,8 @@
                       <a class="nav-link" href="elements.html">Elements</a>
                     </li>
                   </ul>
-                </li>
-                <li class="nav-item submenu dropdown">
+                </li> -->
+                <!-- <li class="nav-item submenu dropdown">
                   <a
                     href="#"
                     class="nav-link dropdown-toggle"
@@ -112,9 +112,9 @@
                       >
                     </li>
                   </ul>
-                </li>
+                </li> -->
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="#Contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -149,41 +149,14 @@
                     environmental policies, applied microeconomics, and
                     industrial organization.
                   </p>
-                  <ul class="list basic_info">
-                    <li>
-                      <a href="#"
-                        ><i class="lnr lnr-calendar-full"></i> 31st December,
-                        1992</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><i class="lnr lnr-phone-handset"></i> 44 (012) 6954
-                        783</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><i class="lnr lnr-envelope"></i> businessplan@donald</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><i class="lnr lnr-home"></i> Santa monica bullevard</a
-                      >
-                    </li>
-                  </ul>
-                  <ul class="list personal_social">
-                    <li>
-                      <a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                  </ul>
+                  
+                  <h4 class="border-bottom pb-2">Publication</h4>
+                  <p class="">Journal of Applied Business and Economics (Forthcoming)</p>
+
+                  <h4 id="Contact" class="border-bottom pb-2 mb-0 pt-4">Contact</h4>
+                  <a class="d-block pt-2 mb-4" href="mailto:af5g@mtmail.mtsu.edu">af5g@mtmail.mtsu.edu</a>
+                  <a class="btn bg-dark text-light py-2 px-5 inline-block mt-2" target="_blank" href="./assets/docs/AtiaFerdouseeCV.pdf">View CV</a>
+                  <a class="btn bg-dark text-light py-2 px-5 inline-block mt-2" href="./assets/docs/AtiaFerdouseeCV.pdf" download>Download CV</a>
                 </div>
               </div>
             </div>
@@ -193,8 +166,61 @@
     </section>
     <!--================End Home Banner Area =================-->
 
+        <!--================Research Area =================-->
+        <section id="Research" class="py-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <h2  class="text-center mb-4">Research</h2>
+                <div class="JobMarketPaper border py-5 px-4">
+                  <p>"The market share of electric vehicles (EV) is growing in the USA and there are substantial
+                    numbers of federal, state, and county-level incentives for EV consumers. These incentives are in
+                    place, primarily, to promote environmental concerns. This study focuses on two different but
+                    interrelated aspects of EV adoption...."</p>
+                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
+                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/JobMarketPaper.pdf">Job Market Paper PDF</a>
+                </div>
+                <div class="WorkingPaper border py-5 px-4 mt-4">
+                  <p>The Effect of Tax Credit Policy on Electric Vehicle Sales:
+                    A Synthetic Control Approach using Bayesian Structural Time Series
+                    By Atia Ferdousee, Middle Tennessee State University, Murfreesboro, TN
+                    JEL category: C53, D04</p>
+                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
+                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/WorkingPaper.pdf">Working Paper PDF</a>
+                </div>
+                <div class="ResearchStatement border py-5 px-4 mt-4">
+                  <p>Research Statement of Atia Ferdousee</p>
+                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
+                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/ResearchStatement.pdf">Research Statement PDF</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--================End Research Area =================-->
+
+
+                <!--================Teaching Area =================-->
+                <section id="Teaching" class="py-5">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <h2 id="" class="mb-4 border-bottom pb-2">Teaching</h2>
+                        <div class="TeachingButton py-2">
+                            <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
+                            <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2" target="_blank" href="./assets/docs/TeachingPhilosophyStatement.pdf">Teaching Philosophy Statement</a>
+                            <br>
+                            <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2" target="_blank" href="./assets/docs/TeachingCertificate.pdf">Teaching Certificate</a>
+                        </div>
+                        <h2 id="" class="mt-5 mb-4 border-bottom pb-2">Teaching Experience</h2>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+                <!--================End Teaching Area =================-->
+    
     <!--================Accordion Panel =================-->
-    <div id="fsd-section-two-id" class="fsd-section-two container my-5 py-5">
+    <!-- <div id="fsd-section-two-id" class="fsd-section-two container my-5 py-5">
       <div class="row">
         <div class="col-md-12 col-sm-12 mx-auto">
           <div class="accordion" id="accordionExample">
@@ -281,16 +307,14 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--================End Accordion Panel =================-->
 
     <!--================Home Gallery Area =================-->
 
     <!--================End Home Gallery Area =================-->
 
-    <!--================Testimonials Area =================-->
 
-    <!--================End Testimonials Area =================-->
 
     <!--================Footer Area =================-->
     <footer class="footer_area bg-dark">
