Mostly Done And For First Revision

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="icon" href="img/favicon.png" type="image/png" />
-    <title>Atia Ferdousee</title>
+    <link rel="icon" href="./favicon.jpg" type="image/jpg" />
+    <title>Ferdousee's Profile</title>
     <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap"
@@ -21,17 +21,6 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-
-    <!-- <link rel="stylesheet" href="css/bootstrap.css" /> -->
-    <!-- <link rel="stylesheet" href="vendors/linericon/style.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
-        <link rel="stylesheet" href="vendors/animate-css/animate.css">
-        <link rel="stylesheet" href="vendors/popup/magnific-popup.css">
-        <link rel="stylesheet" href="vendors/flaticon/flaticon.css"> -->
-    <!-- main css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
@@ -43,7 +32,7 @@
           <div class="container box_1620">
             <!-- Brand and toggle get grouped for better mobile display -->
             <a class="navbar-brand logo_h" href="index.html"
-              ><h2 class="text-white">Atia Ferdousee</h2></a
+              ><h2 class="text-white">Ferdousee.com</h2></a
             >
             <button
               class="navbar-toggler"
@@ -65,7 +54,12 @@
             >
               <ul class="nav navbar-nav menu_nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" target="_blank" href="./assets/docs/AtiaFerdouseeCV.pdf">Curriculum Vitae</a>
+                  <a
+                    class="nav-link"
+                    target="_blank"
+                    href="./assets/docs/AtiaFerdouseeCV.pdf"
+                    >Curriculum Vitae</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Research">Research</a>
@@ -73,46 +67,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#Teaching">Teaching</a>
                 </li>
-                <!-- <li class="nav-item submenu dropdown">
-                  <a
-                    href="#"
-                    class="nav-link dropdown-toggle"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Pages</a
-                  >
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="elements.html">Elements</a>
-                    </li>
-                  </ul>
-                </li> -->
-                <!-- <li class="nav-item submenu dropdown">
-                  <a
-                    href="#"
-                    class="nav-link dropdown-toggle"
-                    data-toggle="dropdown"
-                    role="button"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                    >Blog</a
-                  >
-                  <ul class="dropdown-menu">
-                    <li class="nav-item">
-                      <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="single-blog.html"
-                        >Blog Details</a
-                      >
-                    </li>
-                  </ul>
-                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="#Contact">Contact</a>
                 </li>
@@ -149,14 +103,32 @@
                     environmental policies, applied microeconomics, and
                     industrial organization.
                   </p>
-                  
-                  <h4 class="border-bottom pb-2">Publication</h4>
-                  <p class="">Journal of Applied Business and Economics (Forthcoming)</p>
 
-                  <h4 id="Contact" class="border-bottom pb-2 mb-0 pt-4">Contact</h4>
-                  <a class="d-block pt-2 mb-4" href="mailto:af5g@mtmail.mtsu.edu">af5g@mtmail.mtsu.edu</a>
-                  <a class="btn bg-dark text-light py-2 px-5 inline-block mt-2" target="_blank" href="./assets/docs/AtiaFerdouseeCV.pdf">View CV</a>
-                  <a class="btn bg-dark text-light py-2 px-5 inline-block mt-2" href="./assets/docs/AtiaFerdouseeCV.pdf" download>Download CV</a>
+                  <h4 class="border-bottom pb-2">Publication</h4>
+                  <p class="">
+                    Journal of Applied Business and Economics (Forthcoming)
+                  </p>
+
+                  <h4 id="Contact" class="border-bottom pb-2 mb-0 pt-4">
+                    Contact
+                  </h4>
+                  <a
+                    class="d-block pt-2 mb-4"
+                    href="mailto:af5g@mtmail.mtsu.edu"
+                    >af5g@mtmail.mtsu.edu</a
+                  >
+                  <a
+                    class="btn bg-dark text-light py-2 px-5 inline-block mt-2"
+                    target="_blank"
+                    href="./assets/docs/AtiaFerdouseeCV.pdf"
+                    >View CV</a
+                  >
+                  <a
+                    class="btn bg-dark text-light py-2 px-5 inline-block mt-2"
+                    href="./assets/docs/AtiaFerdouseeCV.pdf"
+                    download
+                    >Download CV</a
+                  >
                 </div>
               </div>
             </div>
@@ -166,154 +138,122 @@
     </section>
     <!--================End Home Banner Area =================-->
 
-        <!--================Research Area =================-->
-        <section id="Research" class="py-5">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <h2  class="text-center mb-4">Research</h2>
-                <div class="JobMarketPaper border py-5 px-4">
-                  <p>"The market share of electric vehicles (EV) is growing in the USA and there are substantial
-                    numbers of federal, state, and county-level incentives for EV consumers. These incentives are in
-                    place, primarily, to promote environmental concerns. This study focuses on two different but
-                    interrelated aspects of EV adoption...."</p>
-                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
-                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/JobMarketPaper.pdf">Job Market Paper PDF</a>
-                </div>
-                <div class="WorkingPaper border py-5 px-4 mt-4">
-                  <p>The Effect of Tax Credit Policy on Electric Vehicle Sales:
-                    A Synthetic Control Approach using Bayesian Structural Time Series
-                    By Atia Ferdousee, Middle Tennessee State University, Murfreesboro, TN
-                    JEL category: C53, D04</p>
-                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
-                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/WorkingPaper.pdf">Working Paper PDF</a>
-                </div>
-                <div class="ResearchStatement border py-5 px-4 mt-4">
-                  <p>Research Statement of Atia Ferdousee</p>
-                    <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
-                    <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0" target="_blank" href="./assets/docs/ResearchStatement.pdf">Research Statement PDF</a>
-                </div>
-              </div>
+    <!--================Research Area =================-->
+    <section id="Research" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="mb-4">Research</h2>
+            <div class="JobMarketPaper border py-4 px-4">
+              <p>
+                "Impact of Electric Vehicle Adoption on Electricity Consumption
+                and Generation"<br />JEL category: D04, Q58
+              </p>
+              <a
+                class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
+                target="_blank"
+                href="./assets/docs/JobMarketPaper.pdf"
+                >Job Market Paper</a
+              >
+            </div>
+            <div class="WorkingPaper border py-4 px-4 mt-4">
+              <p>
+                "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
+                Synthetic Control Approach using Bayesian Structural Time
+                Series"<br />
+                JEL category: C53, D04 <br />(Accepted For Publication In The
+                Journal of Applied Business and Economics)
+              </p>
+              <a
+                class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
+                target="_blank"
+                href="./assets/docs/WorkingPaper.pdf"
+                >Working Paper</a
+              >
+            </div>
+            <div class="ResearchStatement border py-4 px-4 mt-4">
+              <p>Research Statement of Atia Ferdousee</p>
+              <a
+                class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
+                target="_blank"
+                href="./assets/docs/ResearchStatement.pdf"
+                >Research Statement</a
+              >
             </div>
           </div>
-        </section>
-        <!--================End Research Area =================-->
+        </div>
+      </div>
+    </section>
+    <!--================End Research Area =================-->
 
-
-                <!--================Teaching Area =================-->
-                <section id="Teaching" class="py-5">
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <h2 id="" class="mb-4 border-bottom pb-2">Teaching</h2>
-                        <div class="TeachingButton py-2">
-                            <!-- <p class="d-inline-block my-0 mr-2 py-2">Read The Full </p> -->
-                            <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2" target="_blank" href="./assets/docs/TeachingPhilosophyStatement.pdf">Teaching Philosophy Statement</a>
-                            <br>
-                            <a class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2" target="_blank" href="./assets/docs/TeachingCertificate.pdf">Teaching Certificate</a>
-                        </div>
-                        <h2 id="" class="mt-5 mb-4 border-bottom pb-2">Teaching Experience</h2>
-                      </div>
-                    </div>
-                  </div>
-                </section>
-                <!--================End Teaching Area =================-->
-    
-    <!--================Accordion Panel =================-->
-    <!-- <div id="fsd-section-two-id" class="fsd-section-two container my-5 py-5">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 mx-auto">
-          <div class="accordion" id="accordionExample">
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button
-                    class="btn btn-link accordion-btn"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#collapseOne"
-                    aria-expanded="true"
-                    aria-controls="collapseOne"
-                  >
-                    Collapsible Group Item #1
-                  </button>
-                </h2>
-              </div>
-
-              <div
-                id="collapseOne"
-                class="collapse show"
-                aria-labelledby="headingOne"
-                data-parent="#accordionExample"
+    <!--================Teaching Area =================-->
+    <section id="Teaching" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 id="" class="border-bottom d-inline-block pr-4 pb-2">
+              Teaching
+            </h2>
+            <div class="TeachingButton py-2">
+              <a
+                class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2"
+                target="_blank"
+                href="./assets/docs/TeachingPhilosophyStatement.pdf"
+                >Teaching Philosophy Statement</a
               >
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life
-                  accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                  non cupidatat skateboard dolor brunch. Food truck quinoa
-                  nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                  aliqua put a bird on it squid single-origin coffee nulla
-                  assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
-                  beer labore wes anderson cred nesciunt sapiente ea proident.
-                  Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
-                  beer farm-to-table, raw denim aesthetic synth nesciunt you
-                  probably haven't heard of them accusamus labore sustainable
-                  VHS.
-                </div>
+              <br />
+              <div class="border mt-5 py-4 px-4">
+                <p class="">
+                  Teaching Preparation Certificate (2020) by Learning, Teaching
+                  & Innovative Technologies Center, MTSU
+                </p>
+                <a
+                  class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2"
+                  target="_blank"
+                  href="./assets/docs/TeachingCertificate.pdf"
+                  >Teaching Certificate</a
+                >
+              </div>
+            </div>
+            <h2 id="" class="mt-5 mb-4 border-bottom pb-2">
+              Teaching Experience
+            </h2>
+            <ul>
+              <li>
+                Principles of Macroeconomics (ECON 2410), Middle Tennessee State
+                University (Spring 2020)
+              </li>
+              <li>
+                Principles of Microeconomics (ECON 2420), Middle Tennessee State
+                University (Fall, 2020)
+              </li>
+            </ul>
+            <p class="pt-4">
+              # Atia Ferdousee receives emails/ notes from her students, which
+              may confirm her integrity and dedication in the classroom. Here
+              are a couple of examples.
+            </p>
+            <div class="row mb-4">
+              <div class="col-lg-6 col-md-12 mt-4">
+                <img
+                  class="w-100 fsd-box-shadow-img"
+                  src="./assets/docs/screenshot1.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="col-lg-6 col-md-12 mt-4">
+                <img
+                  class="w-100 fsd-box-shadow-img"
+                  src="./assets/docs/screenshot2.jpg"
+                  alt=""
+                />
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row pt-5">
-        <div class="col-md-12 col-sm-12 mx-auto">
-          <div class="accordion" id="accordionTwo">
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h2 class="mb-0">
-                  <button
-                    class="btn btn-link accordion-btn"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#collapseTwo"
-                    aria-expanded="true"
-                    aria-controls="collapseOne"
-                  >
-                    Collapsible Group Item #1
-                  </button>
-                </h2>
-              </div>
-
-              <div
-                id="collapseTwo"
-                class="collapse show"
-                aria-labelledby="headingOne"
-                data-parent="#accordionTwo"
-              >
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life
-                  accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                  non cupidatat skateboard dolor brunch. Food truck quinoa
-                  nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                  aliqua put a bird on it squid single-origin coffee nulla
-                  assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
-                  beer labore wes anderson cred nesciunt sapiente ea proident.
-                  Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
-                  beer farm-to-table, raw denim aesthetic synth nesciunt you
-                  probably haven't heard of them accusamus labore sustainable
-                  VHS.
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!--================End Accordion Panel =================-->
-
-    <!--================Home Gallery Area =================-->
-
-    <!--================End Home Gallery Area =================-->
-
+    </section>
+    <!--================End Teaching Area =================-->
 
 
     <!--================Footer Area =================-->
