Applying For First Revision

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="row">
           <div class="col-lg-12">
             <h2 class="mb-4">Research</h2>
-            <div class="JobMarketPaper border py-4 px-4">
+            <div class="JobMarketPaper fsd-box-shadow-img py-4 px-4">
               <p>
                 "Impact of Electric Vehicle Adoption on Electricity Consumption
                 and Generation"<br />JEL category: D04, Q58
@@ -156,7 +156,7 @@
                 >Job Market Paper</a
               >
             </div>
-            <div class="WorkingPaper border py-4 px-4 mt-4">
+            <div class="WorkingPaper fsd-box-shadow-img py-4 px-4 mt-4">
               <p>
                 "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
                 Synthetic Control Approach using Bayesian Structural Time
@@ -171,7 +171,7 @@
                 >Working Paper</a
               >
             </div>
-            <div class="ResearchStatement border py-4 px-4 mt-4">
+            <div class="ResearchStatement fsd-box-shadow-img py-4 px-4 mt-4">
               <p>Research Statement of Atia Ferdousee</p>
               <a
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
@@ -191,9 +191,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 id="" class="border-bottom d-inline-block pr-4 pb-2">
+            <h2 id="" class="border-bottom d-inline-block pb-2">
               Teaching
             </h2>
+            <br>
             <div class="TeachingButton py-2">
               <a
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-2"
@@ -202,7 +203,7 @@
                 >Teaching Philosophy Statement</a
               >
               <br />
-              <div class="border mt-5 py-4 px-4">
+              <div class="fsd-box-shadow-img mt-5 py-4 px-4">
                 <p class="">
                   Teaching Preparation Certificate (2020) by Learning, Teaching
                   & Innovative Technologies Center, MTSU
@@ -215,9 +216,10 @@
                 >
               </div>
             </div>
-            <h2 id="" class="mt-5 mb-4 border-bottom pb-2">
+            <h2 id="" class="mt-5 mb-4 border-bottom pb-2 d-inline-block">
               Teaching Experience
             </h2>
+            <br>
             <ul>
               <li>
                 Principles of Macroeconomics (ECON 2410), Middle Tennessee State
@@ -228,7 +230,7 @@
                 University (Fall, 2020)
               </li>
             </ul>
-            <p class="pt-4">
+            <p class="pt-2">
               # Atia Ferdousee receives emails/ notes from her students, which
               may confirm her integrity and dedication in the classroom. Here
               are a couple of examples.
