Applying For First Revision

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div
               class="collapse navbar-collapse offset"
               id="navbarSupportedContent"
@@ -87,7 +86,7 @@
               <div class="d-flex fsd-atia-main-img">
                 <img class="" src="assets/images/AtiaFerdousee.jpg" alt="" />
               </div>
-              <div class="media-body px-lg-5 ml-lg-5">
+              <div class="media-body pr-xl-4 pl-lg-5 pr-lg-0 ml-lg-2">
                 <div class="personal_text section-one-text-con">
                   <h1 class="mb-3 pb-3">Atia Ferdousee</h1>
                   <h4 class="mb-5 mt-4">
