--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
                 Synthetic Control Approach using Bayesian Structural Time
                 Series"<br />
-                JEL category: C53, D04 <br />(Accepted For Publication In The
+                JEL category: C53, D04 <br />(Accepted For Publication in The
                 Journal of Applied Business and Economics)
               </p>
               <a
