V2  has been Revisioned

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
                 Synthetic Control Approach using Bayesian Structural Time
                 Series"<br />
-                JEL category: C53, D04 <br />(Accepted For Publication in The
+                JEL category: C53, D04 <br />(Accepted for Publication in The
                 Journal of Applied Business and Economics)
               </p>
               <a
@@ -230,7 +230,7 @@
               </li>
             </ul>
             <p class="pt-2">
-              # Atia Ferdousee receives emails/ notes from her students, which
+              Atia Ferdousee receives emails/ notes from her students, which
               may confirm her integrity and dedication in the classroom. Here
               are a couple of examples.
             </p>
