February updates has been added

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
                   <h4 class="border-bottom pb-2">Publication</h4>
                   <p class="">
-                    Journal of Applied Business and Economics (Forthcoming)
+                    Journal of Applied Business and Economics, Vol 22(13)<br>
+                    DOI: <a target="_blank" href="https://doi.org/10.33423/jabe.v22i13.3912">https://doi.org/10.33423/jabe.v22i13.3912</a>
                   </p>
 
                   <h4 id="Contact" class="border-bottom pb-2 mb-0 pt-4">
@@ -160,8 +161,8 @@
                 "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
                 Synthetic Control Approach using Bayesian Structural Time
                 Series"<br />
-                JEL category: C53, D04 <br />(Accepted for Publication in The
-                Journal of Applied Business and Economics)
+                JEL category: C53, D04 <br />(Published in The
+                Journal of Applied Business and Economics, Vol 22, No 13)
               </p>
               <a
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
