--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 
                   <h4 class="border-bottom pb-2">Publication</h4>
                   <p class="">
-                    Journal of Applied Business and Economics, Vol 22(13)<br>
+                    1: International Journal of Energy Economics and Policy, Vol 12(5)<br>
+                    DOI: <a target="_blank" href="https://econjournals.com/index.php/ijeep/article/view/13271/6905">https://econjournals.com/index.php/ijeep/article/view/13271/6905</a>
+                  </p>
+
+                  <p class="">
+                    2: Journal of Applied Business and Economics, Vol 22(13)<br>
                     DOI: <a target="_blank" href="https://doi.org/10.33423/jabe.v22i13.3912">https://doi.org/10.33423/jabe.v22i13.3912</a>
                   </p>
 
@@ -171,17 +176,13 @@
 
             <div class="WorkingPaper fsd-box-shadow-img py-4 px-4 mt-4">
               <p>
-                "The Effect of Tax Credit Policy on Electric Vehicle Sales: A
-                Synthetic Control Approach using Bayesian Structural Time
-                Series"<br />
-                JEL category: C53, D04 <br />(Published in The
-                Journal of Applied Business and Economics, Vol 22, No 13)
+                The Factors Influencing the Joint Adoption of Electric Vehicle and Solar Photovoltaics: Evidence from California
               </p>
               <a
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
-                href="./assets/docs/WorkingPaper.pdf"
-                >Working Paper</a
+                href="./assets/docs/WorkingPaperAbstract.pdf"
+                >Working Paper Abstract</a
               >
             </div>
             <div class="ResearchStatement fsd-box-shadow-img py-4 px-4 mt-4">
