--- a/index.html
+++ b/index.html
@@ -104,14 +104,23 @@
                   </p>
 
                   <h4 class="border-bottom pb-2">Publication</h4>
+
                   <p class="">
-                    1: International Journal of Energy Economics and Policy, Vol 12(5)<br>
-                    DOI: <a target="_blank" href="https://econjournals.com/index.php/ijeep/article/view/13271/6905">https://econjournals.com/index.php/ijeep/article/view/13271/6905</a>
+                    1: Climate Change Economics<br>
+                    DOI: <a target="_blank" href="https://doi.org/10.1142/S2010007824500027">https://doi.org/10.1142/S2010007824500027</a><br/>
+                    2024
                   </p>
 
                   <p class="">
-                    2: Journal of Applied Business and Economics, Vol 22(13)<br>
-                    DOI: <a target="_blank" href="https://doi.org/10.33423/jabe.v22i13.3912">https://doi.org/10.33423/jabe.v22i13.3912</a>
+                    2: International Journal of Energy Economics and Policy, Vol 12(5)<br>
+                    DOI: <a target="_blank" href="https://econjournals.com/index.php/ijeep/article/view/13271/6905">https://econjournals.com/index.php/ijeep/article/view/13271/6905</a><br/>
+                    2022 
+                  </p>
+
+                  <p class="">
+                    3: Journal of Applied Business and Economics, Vol 22(13)<br>
+                    DOI: <a target="_blank" href="https://doi.org/10.33423/jabe.v22i13.3912">https://doi.org/10.33423/jabe.v22i13.3912</a><br/>
+                    2020
                   </p>
 
                   <h4 id="Contact" class="border-bottom pb-2 mb-0 pt-4">
@@ -158,7 +167,7 @@
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
                 href="./assets/docs/JobMarketPaperAbstract.pdf"
-                >Job Market Paper Abstract</a
+                >Job Market Paper</a
               >
             </div>
 
@@ -170,7 +179,7 @@
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
                 href="./assets/docs/DissertationAbstract.pdf"
-                >Dissertation Abstract</a
+                >Dissertation</a
               >
             </div>
 
@@ -182,7 +191,7 @@
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
                 href="./assets/docs/WorkingPaperAbstract.pdf"
-                >Working Paper Abstract</a
+                >Working Paper</a
               >
             </div>
             <div class="ResearchStatement fsd-box-shadow-img py-4 px-4 mt-4">
@@ -236,11 +245,17 @@
             <br>
             <ul>
               <li>
-                Principles of Macroeconomics (ECON 2410), Middle Tennessee State
+                Principles of Macroeconomics, Middle Tennessee State University (Online, Spring 2021) 
+              </li>
+              <li>
+                Principles of Microeconomics, Middle Tennessee State University (Online, Spring 2021)
+              </li>
+              <li>
+                Principles of Macroeconomics, Middle Tennessee State
                 University (Spring 2020)
               </li>
               <li>
-                Principles of Microeconomics (ECON 2420), Middle Tennessee State
+                Principles of Microeconomics, Middle Tennessee State
                 University (Fall, 2020)
               </li>
             </ul>
