ferdousee.com updating publication, cv, teaching statement section and some minore changes

--- a/index.html
+++ b/index.html
@@ -160,13 +160,14 @@
             <h2 class="mb-4">Research</h2>
             <div class="JobMarketPaper fsd-box-shadow-img py-4 px-4">
               <p>
-                "Impact of Electric Vehicle Adoption on Electricity Consumption
-                and Generation"<br />JEL category: D04, Q58
+                "The factors influencing the joint purchase of
+                electric vehicle and solar photovoltaics:
+                evidence from california"<br />JEL category: Q42, Q55
               </p>
               <a
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
-                href="./assets/docs/JobMarketPaperAbstract.pdf"
+                href="./assets/docs/Electric-Vehicle-Solar-California-Paper.pdf"
                 >Job Market Paper</a
               >
             </div>
@@ -179,11 +180,11 @@
                 class="btn bg-dark text-light py-2 px-5 d-inline-block mt-0"
                 target="_blank"
                 href="./assets/docs/DissertationAbstract.pdf"
-                >Dissertation</a
+                >Dissertation Abstract</a
               >
             </div>
 
-            <div class="WorkingPaper fsd-box-shadow-img py-4 px-4 mt-4">
+            <div hidden class="WorkingPaper fsd-box-shadow-img py-4 px-4 mt-4">
               <p>
                 The Factors Influencing the Joint Adoption of Electric Vehicle and Solar Photovoltaics: Evidence from California
               </p>
